--- a/main.tex
+++ b/main.tex
@@ -119,17 +119,12 @@
   \begin{@twocolumnfalse}
 \vspace{3cm}
 \sffamily
-\begin{tabular}{m{4.5cm} p{13.5cm} }
 
-\includegraphics{head_foot/DOI} & \noindent\LARGE{\textbf{This is the title$^\dag$}} \\%Article title goes here instead of the text "This is the title"
- & \vspace{0.3cm} \\
 
- & \noindent\large{Full Name,$^{\ast}$\textit{$^{a}$} Full Name,\textit{$^{b\ddag}$} and Full Name\textit{$^{a}$}} \\%Author names go here instead of "Full name", etc.
-
-\includegraphics{head_foot/dates} & \\
-
-\end{tabular}
-
+\noindent\LARGE{\textbf{Synthetic Accesibility of Organic Materials}} \\%Article title goes here instead of the text "This is the title"
+\noindent\large{Steven Bennett,{$^*$} Kim Jelfs} \\%Author names go here instead of "Full name", etc.
+\newline
+\noindent\large{CID: 00957234}
  \end{@twocolumnfalse} \vspace{0.6cm}
 
   ]
@@ -166,8 +161,25 @@
 
 %%%MAIN TEXT%%%%
 
-The main text of the article\cite{Mena2000} should appear here. Please note that communications do not have section headings.\\
+\section{Introduction}
+Synthetic accessibility (SA) is an important filter for generating suitable candidates for high-throughput materials screening. As the generative capabilities of computational techniques increase, the number of proposed novel compounds with favourable properties is exponentially increasing.   
 
+\section{Methods}
+
+\paragraph{Measuring Synthetic Accessibility}
+
+\paragraph{Genetic Algorithms}
+
+\paragraph{Machine Learning}
+
+\paragraph{Databases}
+
+\section{Results and Discussion}
+\section{Conclusions}
+
+\section{Future Plans and Outlook}
+
+\paragraph{Accelerating Genetic Algorithms with Deep Learning}
 Equations can be typeset inline \textit{e.g.} $ y = mx + c$ or displayed with and without numbers:
 
  \[ A = \pi r^2 \]
@@ -236,8 +248,6 @@ The \texttt{mhchem} package can also be used so that formulae are easy to input:
 
 The conclusions section should come at the end of article. For the reference section, the style file \texttt{rsc.bst} can be used to generate the correct reference style.\footnote[4]{Footnotes should appear here. These might include comments relevant to but not central to the matter under discussion, limited experimental and spectral data, and crystallographic data.}
 
-\section*{Conflicts of interest}
-In accordance with our policy on \href{http://www.rsc.org/journals-books-databases/journal-authors-reviewers/author-responsibilities/#code-of-conduct}{Conflicts of interest} please ensure that a conflicts of interest statement is included in your manuscript here.  Please note that this statement is required for all submitted manuscripts.  If no conflicts exist, please state that ``There are no conflicts to declare''.
 %%%END OF MAIN TEXT%%%
 
  %For footnotes in the main text of the article please number the footnotes to avoid duplicate symbols. e.g.  \footnote[num]{your text} the corresponding author \ast counts as footnote 1, ESI as footnote 2, e.g. if there is no ESI, please start at [num]=[2], if ESI is cited in the title please start at [num]=[3] etc. Please also cite the ESI within the main body of the text using \dag.
